// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can add new options 1`] = `
<div
  aria-busy={false}
  aria-expanded={false}
  className="ui search selection dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="combobox"
>
  <input
    aria-autocomplete="list"
    autoComplete="off"
    className="search"
    onChange={[Function]}
    style={
      Object {
        "width": undefined,
      }
    }
    tabIndex={0}
    type="text"
    value=""
  />
  <div
    aria-atomic={true}
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="dropdown icon"
    onClick={[Function]}
  />
  <div
    className="menu transition"
    role="listbox"
  >
    <div
      className="message"
    >
      No results found.
    </div>
  </div>
</div>
`;

exports[`Can add new options 2`] = `
<div
  aria-busy={false}
  aria-expanded={false}
  className="ui search selection dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="combobox"
>
  <input
    aria-autocomplete="list"
    autoComplete="off"
    className="search"
    onChange={[Function]}
    style={
      Object {
        "width": undefined,
      }
    }
    tabIndex={0}
    type="text"
    value=""
  />
  <div
    aria-atomic={true}
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="dropdown icon"
    onClick={[Function]}
  />
  <div
    className="menu transition"
    role="listbox"
  >
    <div
      aria-checked={false}
      aria-selected={true}
      className="selected item"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="text"
      >
        New Option
      </span>
    </div>
  </div>
</div>
`;

exports[`Can load options 1`] = `
<div
  aria-busy={false}
  aria-expanded={false}
  className="ui search selection dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="combobox"
>
  <input
    aria-autocomplete="list"
    autoComplete="off"
    className="search"
    onChange={[Function]}
    style={
      Object {
        "width": undefined,
      }
    }
    tabIndex={0}
    type="text"
    value=""
  />
  <div
    aria-atomic={true}
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="dropdown icon"
    onClick={[Function]}
  />
  <div
    className="menu transition"
    role="listbox"
  >
    <div
      className="message"
    >
      No results found.
    </div>
  </div>
</div>
`;

exports[`Can load options 2`] = `
<div
  aria-busy={false}
  aria-expanded={false}
  className="ui search selection dropdown"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseDown={[Function]}
  role="combobox"
>
  <input
    aria-autocomplete="list"
    autoComplete="off"
    className="search"
    onChange={[Function]}
    style={
      Object {
        "width": undefined,
      }
    }
    tabIndex={0}
    type="text"
    value=""
  />
  <div
    aria-atomic={true}
    aria-live="polite"
    className="text"
    role="alert"
  />
  <i
    aria-hidden="true"
    className="dropdown icon"
    onClick={[Function]}
  />
  <div
    className="menu transition"
    role="listbox"
  >
    <div
      aria-checked={false}
      aria-selected={true}
      className="selected item"
      onClick={[Function]}
      role="option"
      style={
        Object {
          "pointerEvents": "all",
        }
      }
    >
      <span
        className="text"
      >
        Option 1
      </span>
    </div>
  </div>
</div>
`;
